force-app/main/default/objects/tc9_et__Interpretation_Rule__c/tc9_et__Interpretation_Rule__c.object-meta.xml
<CustomObject>
    <description>The master object that holds details for how time on Timesheets should be interpreted. Information held on these records is used in processing Timesheets and creating Pay Transactions for Payroll</description>
    <label>Interpretation Rule</label>
    <nameField>
        <label>Interpretation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interpretation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>