force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_edc__External_ID_Data_Creation__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__External_ID_Data_Creation__c</fullName>
    <description>External id field to be used with the 3rd party integration tools</description>
    <externalId>true</externalId>
    <inlineHelpText>External id field to be used with the 3rd party integration tools</inlineHelpText>
    <label>External ID - Data Creation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>