force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_4_Week_Frequency__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_4_Week_Frequency__c</fullName>
    <description>Indicates if the 4 week frequency logic applies.</description>
    <inlineHelpText>Indicates if the 4 week frequency logic applies.</inlineHelpText>
    <label>Apply 4 Week Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>