force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Break_Loading_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Break_Loading_Interpretation__c</fullName>
    <description>If yes, then the interpretation will apply break loading logic where if you exceed 5hrs without a 30 minute unpaid break the remaining hours are paid as overtime.</description>
    <inlineHelpText>If yes, then the interpretation will apply break loading logic where if you exceed 5hrs without a 30 minute unpaid break the remaining hours are paid as overtime.</inlineHelpText>
    <label>Apply Break Loading Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>