force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Break_Time_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Break_Time_Interpretation__c</fullName>
    <description>If yes, then the interpretation will apply break Time logic to the before, after, standard and overtime interpretation.</description>
    <inlineHelpText>If yes, then the interpretation will apply break Time logic to the before, after, standard and overtime interpretation.</inlineHelpText>
    <label>Apply Break Time Interpretation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>