force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Dual_Leave_Loading_Calculations__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Dual_Leave_Loading_Calculations__c</fullName>
    <description>Indicates if during timesheet interpretation dual calculations are required for leave loading.</description>
    <inlineHelpText>Indicates if during timesheet interpretation dual calculations are required for leave loading.</inlineHelpText>
    <label>Apply Dual Leave Loading Calculations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>