force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Excursion_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Excursion_Interpretation__c</fullName>
    <description>If yes, excursion shift logic will be applied to this Interpretation Rule</description>
    <inlineHelpText>If yes, excursion shift logic will be applied to this Interpretation Rule</inlineHelpText>
    <label>Apply Excursion Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>