force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Interpretation_Variations__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Interpretation_Variations__c</fullName>
    <description>Indicates that Interpretation Variations are required for the Interpretation Rule</description>
    <inlineHelpText>Indicates that Interpretation Variations are required for the Interpretation Rule</inlineHelpText>
    <label>Apply Interpretation Variations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>