force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Minimum_Rest_on_Overtime__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Minimum_Rest_on_Overtime__c</fullName>
    <description>Defines if Minimum Rest should only be calculated from timesheet entries with overtime (excluding Wake Up).</description>
    <inlineHelpText>Defines if Minimum Rest should only be calculated from timesheet entries with overtime (excluding Wake Up).</inlineHelpText>
    <label>Apply Minimum Rest on Overtime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>