force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Minimum_Rest_To_Same_Day_Entries__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Minimum_Rest_To_Same_Day_Entries__c</fullName>
    <description>Defines if Minimum Rest will be applied to timesheet entries that are on the same calendar day.</description>
    <inlineHelpText>Defines if Minimum Rest will be applied to timesheet entries that are on the same calendar day.</inlineHelpText>
    <label>Apply Minimum Rest To Same Day Entries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>