force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_OT_Round_Up_Shift_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_OT_Round_Up_Shift_Interpretation__c</fullName>
    <description>To indicate if the interpretation rule requires Overtime Round Up shifts to be calculated.</description>
    <inlineHelpText>To indicate if the interpretation rule requires Overtime Round Up shifts to be calculated.</inlineHelpText>
    <label>Apply OT Round Up Shift Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>