force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Overnight_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Overnight_Interpretation__c</fullName>
    <description>If yes, then the interpretation will apply overnight logic to entries with time within standard start/end time</description>
    <inlineHelpText>If yes, then the interpretation will apply overnight logic to entries with time within standard start/end time</inlineHelpText>
    <label>Apply Overnight Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>