force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Overnight_Majority_Friday__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Overnight_Majority_Friday__c</fullName>
    <description>If Yes, users will be able to define that overnight logic for this day will be paid at the breakpoint where the majority of the Timesheet Entry falls.</description>
    <inlineHelpText>If Yes, users will be able to define that overnight logic for this day will be paid at the breakpoint where the majority of the Timesheet Entry falls.</inlineHelpText>
    <label>Apply Overnight Majority Friday</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>