force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Overtime_On_A_Shift_Basis__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Overtime_On_A_Shift_Basis__c</fullName>
    <description>Defines if Shift based interpretation should apply for this interpretation rule instead of the default of Daily interpretation.</description>
    <inlineHelpText>Defines if Shift based interpretation should apply for this interpretation rule instead of the default of Daily interpretation.</inlineHelpText>
    <label>Apply Shift Based Interpretation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>