force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Partial_Daily_Rates__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Partial_Daily_Rates__c</fullName>
    <description>If Yes, partial daily rates will be able to be interpreted.</description>
    <inlineHelpText>If Yes, partial daily rates will be able to be interpreted.</inlineHelpText>
    <label>Apply Partial Daily Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>