force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Penalty_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Penalty_Loading__c</fullName>
    <description>If Yes, users with have the ability to define a penalty loading pay code to create a penalty loading pay transaction.</description>
    <inlineHelpText>If Yes, users with have the ability to define a penalty loading pay code to create a penalty loading pay transaction.</inlineHelpText>
    <label>Apply Penalty Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>