force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Penalty_Loading_to_Overtime__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Penalty_Loading_to_Overtime__c</fullName>
    <description>Defines if Penalty Loading should apply to Overtime in a Broken Shift</description>
    <inlineHelpText>Defines if Penalty Loading should apply to Overtime in a Broken Shift</inlineHelpText>
    <label>Apply Penalty Loading to Overtime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>