force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Shift_Start_Time_BP__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Shift_Start_Time_BP__c</fullName>
    <description>Defines if the shift start time breakpoint should be used for broken shifts.</description>
    <inlineHelpText>Defines if the shift start time breakpoint should be used for broken shifts.</inlineHelpText>
    <label>Apply Shift Start Time BP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>