force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Sleepover_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Sleepover_Interpretation__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Defines if the interpretation rule requires Sleepover interpretation to be calculated.</description>
    <inlineHelpText>Defines if the interpretation rule requires Sleepover interpretation to be calculated.</inlineHelpText>
    <label>Apply Sleepover Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>