force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Apply_Split_Broken_Shift_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Apply_Split_Broken_Shift_Interpretation__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>If yes, split/broken shift logic will be applied to this Interpretation Rule</description>
    <inlineHelpText>If yes, split/broken shift logic will be applied to this Interpretation Rule</inlineHelpText>
    <label>Apply Split/Broken Shift Interpretation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>