force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment that this Variation Rule applies to.</description>
    <inlineHelpText>The Assignment that this Variation Rule applies to.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Interpretation Rules</relationshipLabel>
    <relationshipName>Interpretation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>