force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Break_Loading_Hours_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Break_Loading_Hours_Exceeded__c</fullName>
    <description>Hours exceeded to apply to the break loading logic (for example, if 5 then if the days hours exceed 5hrs without an unpaid break then the hours after the 5 hours  are paid as overtime).</description>
    <inlineHelpText>Hours exceeded to apply to the break loading logic (for example, if 5 then if the days hours exceed 5hrs without an unpaid break then the hours after the 5 hours  are paid as overtime).</inlineHelpText>
    <label>Break Loading Hours Exceeded</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>