force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Break_Loading_Unpaid_Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Break_Loading_Unpaid_Break_Minutes__c</fullName>
    <description>Minutes that apply to an unpaid break (for example, if 30 then the total of any  unpaid breaks within the Break_Loading_Hours_Exceeded__c  must be less than  30 to be considered for break loading logic to apply</description>
    <inlineHelpText>Minutes that apply to an unpaid break (for example, if 30 then the total of any  unpaid breaks within the Break_Loading_Hours_Exceeded__c  must be less than  30 to be considered for break loading logic to apply</inlineHelpText>
    <label>Break Loading Unpaid Break Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>