force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Broken_Shift_Breakpoint_Application__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Broken_Shift_Breakpoint_Application__c</fullName>
    <description>Defines how the Broken Shift entries are calculated when applying the interpretation breakpoints.</description>
    <inlineHelpText>Defines how the Broken Shift entries are calculated when applying the interpretation breakpoints.</inlineHelpText>
    <label>Broken Shift Breakpoint Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Breakpoint_Application</valueSetName>
    </valueSet>
</CustomField>