force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Broken_Shift_Timesheet_Activity_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Broken_Shift_Timesheet_Activity_Required__c</fullName>
    <description>Defines if Broken Shift logic requires a timesheet activity to be calculated.</description>
    <inlineHelpText>Defines if Broken Shift logic requires a timesheet activity to be calculated.</inlineHelpText>
    <label>Broken Shift Timesheet Activity Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>