force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Calculate_Span_From_Previous_Shift__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Calculate_Span_From_Previous_Shift__c</fullName>
    <description>Defines if the broken shift span is calculated from the previous shift or is based on a calendar day.</description>
    <inlineHelpText>Defines if the broken shift span is calculated from the previous shift or is based on a calendar day.</inlineHelpText>
    <label>Calculate Span From Previous Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>