force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Frequency_Breakpoints_Accrued__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Frequency_Breakpoints_Accrued__c</fullName>
    <description>Defines the days that will have their Hours worked included in the count of hours used when assessing &apos;Frequency&apos; Breakpoints.</description>
    <inlineHelpText>Defines the days that will have their Hours worked included in the count of hours used when assessing &apos;Frequency&apos; Breakpoints.</inlineHelpText>
    <label>Days &apos;Frequency&apos; Breakpoints Accrued</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Frequency_Breakpoint_Days_picklist</valueSetName>
    </valueSet>
</CustomField>