force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Frequency_Breakpoints_Apply__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Frequency_Breakpoints_Apply__c</fullName>
    <description>Defines the days that will be assessed for &apos;Frequency&apos; breakpoints. When a day is selected, when &apos;Frequency&apos; Breakpoint Overtime is reached (Breakpoint 2 and up), &apos;Frequency&apos; Breakpoints will override all other breakpoints that apply to the day.</description>
    <inlineHelpText>Defines the days that will be assessed for &apos;Frequency&apos; breakpoints. When a day is selected, when &apos;Frequency&apos; Breakpoint Overtime is reached (Breakpoint 2 and up), &apos;Frequency&apos; Breakpoints will override all other breakpoints that apply to the day.</inlineHelpText>
    <label>Days &apos;Frequency&apos; Breakpoints Apply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Frequency_Breakpoint_Days_picklist</valueSetName>
    </valueSet>
</CustomField>