force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Minimum_Rest_Hours_Apply2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Minimum_Rest_Hours_Apply2__c</fullName>
    <description>The days where minimum rest logic will be interpreted.</description>
    <inlineHelpText>The days where minimum rest logic will be interpreted.</inlineHelpText>
    <label>Days Minimum Rest Hours Apply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Frequency_Breakpoint_Days_picklist</valueSetName>
    </valueSet>
</CustomField>