force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Overtime_Breakpoints_Reset__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Overtime_Breakpoints_Reset__c</fullName>
    <description>Defines the days that ‘Frequency’ Overtime will reset at the start of the shift.</description>
    <inlineHelpText>Defines the days that ‘Frequency’ Overtime will reset at the start of the shift.</inlineHelpText>
    <label>Days Overtime Breakpoints Reset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Frequency_Breakpoint_Days_picklist</valueSetName>
    </valueSet>
</CustomField>