force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Total_Span_Hours_Apply2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Total_Span_Hours_Apply2__c</fullName>
    <label>Days Total Span Hours Apply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Frequency_Breakpoint_Days_picklist</valueSetName>
    </valueSet>
</CustomField>