force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Days_Total_Span_Hours_Apply__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_Total_Span_Hours_Apply__c</fullName>
    <description>The days where split/broken shift logic will be interpreted</description>
    <inlineHelpText>The days where split/broken shift logic will be interpreted</inlineHelpText>
    <label>DO NOT USE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Days_Monday_To_Sunday</valueSetName>
    </valueSet>
</CustomField>