force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Exclude_Overtime_from_Frequency_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_Overtime_from_Frequency_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines if overtime hours will be excluded in the count of hours worked during the period and assessed against &apos;Frequency&apos; breakpoints.</description>
    <inlineHelpText>This field defines if overtime hours will be excluded in the count of hours worked during the period and assessed against &apos;Frequency&apos; breakpoints.</inlineHelpText>
    <label>Exclude Overtime from &apos;Frequency&apos; Hours</label>
    <type>Checkbox</type>
</CustomField>