force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Exclude_Variation_from_Frequency__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Exclude_Variation_from_Frequency__c</fullName>
    <description>This field if set to Yes then when a Timesheet Entry has this Interpretation Variation, the hours will not be included in Frequency Standard or Overtime calculations and payments.</description>
    <inlineHelpText>This field if set to Yes then when a Timesheet Entry has this Interpretation Variation, the hours will not be included in Frequency Standard or Overtime calculations and payments.</inlineHelpText>
    <label>Exclude Variation from Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>