force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Excursion_Standard_End_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Excursion_Standard_End_Time__c</fullName>
    <description>The standard end time for time entries that are identified as excursions.</description>
    <inlineHelpText>The standard end time for time entries that are identified as excursions.</inlineHelpText>
    <label>Excursion Standard End Time</label>
    <type>Time</type>
</CustomField>