force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Excursion_Standard_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Excursion_Standard_Start_Time__c</fullName>
    <description>The standard start time for entries that are identified as excursions.</description>
    <inlineHelpText>The standard start time for entries that are identified as excursions.</inlineHelpText>
    <label>Excursion Standard Start Time</label>
    <type>Time</type>
</CustomField>