force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Frequency_Standard_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Frequency_Standard_Hours__c</fullName>
    <description>Defines the standard hours expected to be worked for the Timesheet period (as determined by the Timesheet Frequency)</description>
    <inlineHelpText>Defines the standard hours expected to be worked for the Timesheet period (as determined by the Timesheet Frequency)</inlineHelpText>
    <label>Frequency&apos; Standard Hours</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>